--- a/react-ui/src/assets/css/MiniCalendar.css
+++ b/react-ui/src/assets/css/MiniCalendar.css
@@ -24,14 +24,14 @@ abbr[title] {
   text-decoration: unset !important;
 }
 .react-calendar__navigation__prev-button {
-  background-color: #4318ff !important;
+  background-color: #184eff !important;
   border-radius: 10px;
   min-width: 34px !important;
   height: 34px !important;
   color: white;
 }
 .react-calendar__navigation__next-button {
-  background-color: #4318ff !important;
+  background-color: #184eff !important;
   border-radius: 10px;
   min-width: 34px !important;
   width: 34px !important;
@@ -54,7 +54,7 @@ abbr[title] {
   justify-content: center;
   padding: 0px !important;
   height: 34px !important;
-  color: #1b2559;
+  color: #187cff;
 }
 .react-calendar__month-view__weekdays {
   background-color: #f4f7fe;
@@ -73,7 +73,7 @@ abbr[title] {
 .react-calendar__tile--active,
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background: #4318ff;
+  background: #187cff;
   border-radius: 10px;
   color: white;
 }
@@ -81,13 +81,13 @@ abbr[title] {
 .react-calendar__tile--range:enabled:hover,
 .react-calendar__tile--range:enabled:focus {
   background: #f4f7fe;
-  color: #4318ff;
+  color: #187cff;
   border-radius: 0px;
 }
 .react-calendar__tile--rangeStart,
 .react-calendar__tile--rangeStart:enabled:hover,
 .react-calendar__tile--rangeStart:enabled:focus {
-  background: #4318ff;
+  background: #187cff;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   color: white;
@@ -95,7 +95,7 @@ abbr[title] {
 .react-calendar__tile--rangeEnd,
 .react-calendar__tile--rangeEnd:enabled:hover,
 .react-calendar__tile--rangeEnd:enabled:focus {
-  background: #4318ff;
+  background: #187cff;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   color: white;
@@ -107,10 +107,10 @@ body.chakra-ui-dark .react-calendar {
   border-radius: 30px;
 }
 body.chakra-ui-dark .react-calendar__navigation__prev-button {
-  background-color: #7551ff !important;
+  background-color: #187cff !important;
 }
 body.chakra-ui-dark .react-calendar__navigation__next-button {
-  background-color: #7551ff !important;
+  background-color: #187cff !important;
   color: white;
 }
 body.chakra-ui-dark .react-calendar__tile {
@@ -129,29 +129,29 @@ body.chakra-ui-dark .react-calendar__tile--now:enabled:focus {
   background-color: rgba(255, 255, 255, 0.1);
 }
 body.chakra-ui-dark .react-calendar__month-view__days__day--neighboringMonth {
-  color: #b0bbd5;
+  color: #187cff;
 }
 body.chakra-ui-dark .react-calendar__tile--active,
 body.chakra-ui-dark .react-calendar__tile--active:enabled:hover,
 body.chakra-ui-dark .react-calendar__tile--active:enabled:focus {
-  background: #7551ff;
+  background: #187cff;
   color: white;
 }
 body.chakra-ui-dark .react-calendar__tile--range,
 body.chakra-ui-dark .react-calendar__tile--range:enabled:hover,
 body.chakra-ui-dark .react-calendar__tile--range:enabled:focus {
   background: rgba(255, 255, 255, 0.1);
-  color: #7551ff;
+  color: #187cff;
 }
 body.chakra-ui-dark .react-calendar__tile--rangeStart,
 body.chakra-ui-dark .react-calendar__tile--rangeStart:enabled:hover,
 body.chakra-ui-dark .react-calendar__tile--rangeStart:enabled:focus {
-  background: #7551ff;
+  background: #187cff;
   color: white;
 }
 body.chakra-ui-dark .react-calendar__tile--rangeEnd,
 body.chakra-ui-dark .react-calendar__tile--rangeEnd:enabled:hover,
 body.chakra-ui-dark .react-calendar__tile--rangeEnd:enabled:focus {
-  background: #7551ff;
+  background: #187cff;
   color: white;
 }
